[project]
name = "fishRegression"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "DONGUK777", email = "kimdongyork@gmail.com"},
]
dependencies = [
    "scikit-learn>=1.3.2",
    "pandas>=2.0.3",
]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]
note = [
    "notebook>=7.2.2",
    "matplotlib>=3.7.5",
]
